Bug 104911 - Fake BTN_TOOL_PEN on tablets that don't send it
Summary: Fake BTN_TOOL_PEN on tablets that don't send it
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on: 104939
Blocks: 103476
  Show dependency treegraph
 
Reported: 2018-02-02 02:04 UTC by Peter Hutterer
Modified: 2018-02-13 08:22 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2018-02-02 02:04:17 UTC
Some tablets have BTN_TOOL_PEN (and others) but never actually send the events. We should emulate those internally when we see BTN_TOUCH or a nonzero pressure, as well as enabling the proximity out quirk automatically on those devices.

https://bugzilla.redhat.com/show_bug.cgi?id=1535755
has evemu recordings for an aiptek tablet that doesn't send those tool events.
Comment 1 Peter Hutterer 2018-02-07 01:46:59 UTC
See series starting here:
https://lists.freedesktop.org/archives/wayland-devel/2018-February/036853.html
Comment 2 Peter Hutterer 2018-02-13 08:22:54 UTC
commit 2191ed6cc0e80e5fdfb9a560d293a76edd251864
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Tue Feb 6 14:22:01 2018 +1000

    tablet: fake a BTN_TOOL_PEN on the first event if needed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.